Add model funcs.

--- a/config/dev_conf.ini
+++ b/config/dev_conf.ini
@@ -1,7 +1,6 @@
 [app]
 port=8080
 
-
 [mysql]
 username = root
 password = 4399
@@ -10,3 +9,7 @@ database = todos
 [log]
 log_file_path="./logs"
 log_file_name="server.log"
+
+[hashIds]
+salt="salt for hashids"
+min_length=32
