--- a/config/dev_conf.ini
+++ b/config/dev_conf.ini
@@ -13,3 +13,7 @@ log_file_name="server.log"
 [hashIds]
 salt="salt for hashids"
 min_length=32
+
+[jwt]
+secret="secret for jwt"
+expire_time=24 ; Hours
